Recover source to target stream (unique copy)